test/errors/parser/syntax_unterminated_paren.ms
a = (1
// Compiler Error: got EOL where RParen is required
// by right need interpreter to go to next line, but our grammar doesn't support right now
